# hyper-tungstenite-rs

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  README.tpl
.github/workflows/: rust.yml
examples/: server.rs
src/: lib.rs
tests/: simple-server.rs  split.rs  upgrade-request-by-value.rs
