[package]
name = "hyper-tungstenite"
description = "websockets for hyper servers using tungstenite"
version = "0.10.0"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
keywords = ["websocket", "hyper", "async"]
categories = ["web-programming::websocket", "network-programming"]
repository = "https://github.com/de-vri-es/hyper-tungstenite-rs"
documentation = "https://docs.rs/hyper-tungstenite"

edition = "2021"

[dependencies]
hyper = { version = "0.14.4" }
pin-project-lite = "0.2.10"
tokio = "1.2.0"
tokio-tungstenite = "0.19.0"
tungstenite = "0.19.0"

[dev-dependencies]
assert2 = "0.3.4"
hyper = { version = "0.14.18", features = ["http1", "server", "tcp"] }
tokio = { version = "1.2.0", features = ["net", "macros", "rt-multi-thread"] }
futures = { version = "0.3.12" }
