[package]
name = "hyper-tungstenite"
description = "websockets for hyper servers using tungstenite"
version = "0.12.0"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
keywords = ["websocket", "hyper", "async"]
categories = ["web-programming::websocket", "network-programming"]
repository = "https://github.com/de-vri-es/hyper-tungstenite-rs"
documentation = "https://docs.rs/hyper-tungstenite"

edition = "2021"

[dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.0.0" }
hyper-util = { version = "0.1.0", features = ["tokio"] }
pin-project-lite = "0.2.10"
tokio = "1.2.0"
tokio-tungstenite = "0.20.0"
tungstenite = "0.20.0"

[dev-dependencies]
assert2 = "0.3.4"
hyper = { version = "1.0.0", features = ["http1", "server"] }
tokio = { version = "1.2.0", features = ["net", "macros", "rt-multi-thread"] }
futures = { version = "0.3.12" }
